# Commi

./: .env.example  .eslintrc.js  .gitignore  .prettierrc.json  CLAUDE.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  vercel.json
.claude/commands/: plan.md
.github/actions/setup-anchor/: action.yml
.github/actions/setup-solana/: action.yml
.github/workflows/: ci.yml  deploy.yml
.kiro/specs/main-auth-integration/: design.md  requirements.md  tasks.md
apps/backend/: tsconfig.json
apps/backend/src/: index.ts
apps/web/: eslint.config.mjs  tsconfig.json
backend/: .env.example  package-lock.json  package.json  tsconfig.json
backend/crawler/: x_community.ts  x_type.ts  x_users.ts
backend/db/: config.ts  mongdb.ts  setup.ts
contracts/evm/: hardhat.config.ts  package.json  tsconfig.json
contracts/evm/contracts/: AirdropDistributor.sol  AirdropToken.sol
contracts/evm/scripts/: deploy.ts
contracts/solana/: Anchor.toml  Cargo.toml  package.json
contracts/solana/programs/airdrop/: Cargo.toml
contracts/solana/programs/airdrop/src/: lib.rs
documents/: Deployment.md  Test.md  contributing_guideline.md  deployment_guideline.md  test_guideline.md
frontend/: .env.local  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: CommiButton.tsx  CommiModal.tsx  CommiTypo.tsx  LoginButton.tsx  (+4 more)
tests/integration/: database.test.ts
tests/repositories/: campaign_repository.test.ts  tweet_repository.test.ts  user_repository.test.ts
(+72 files in other folders)
