[package]
name = "airdrop"
version = "0.1.0"
description = "AI Airdrop Solana Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "airdrop"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang.workspace = true
anchor-spl.workspace = true

[dev-dependencies]
solana-program-test = "~1.17.0"
solana-sdk = "~1.17.0"
tokio = { version = "1.0", features = ["macros"] }